<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginHorizontal="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Daftar Nilai"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_marginVertical="20dp"
        />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="20dp"
           >

            <!-- Table Heading -->

            <TableRow
                android:background="@color/colorGreen">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="start"
                    android:padding="10sp"
                    android:text="@string/col1"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/col2"
                    android:textColor="@android:color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="6"
                    android:gravity="start"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/col3"
                    android:textColor="@android:color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/col4"
                    android:textColor="@android:color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/col5"
                    android:textColor="@android:color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="3.5"
                    android:gravity="center_horizontal"
                    />


            </TableRow>

            <!-- Table Data -->

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/row1No"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="start"
                    android:padding="10sp"
                    android:text="@string/row1MK"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/row1SKS"
                    android:padding="10sp"
                    android:textSize="12sp"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:padding="10sp"
                    android:id="@+id/row1Nilai"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/row1SKS"
                    android:padding="10sp"
                    android:textSize="12sp"
                    android:layout_weight="3.5"
                    android:gravity="center_horizontal"
                    />


            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/row2No"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="start"
                    android:padding="10sp"
                    android:text="@string/row2MK"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/row2SKS"
                    android:padding="10sp"
                    android:textSize="12sp"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:padding="10sp"
                    android:id="@+id/row2Nilai"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/row2SKS"
                    android:padding="10sp"
                    android:textSize="12sp"
                    android:layout_weight="3.5"
                    android:gravity="center_horizontal"
                    />


            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/row3No"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="start"
                    android:padding="10sp"
                    android:text="@string/row3MK"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/row3SKS"
                    android:padding="10sp"
                    android:textSize="12sp"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:padding="10sp"
                    android:textSize="12sp"
                    android:id="@+id/row3Nilai"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/row3SKS"
                    android:padding="10sp"
                    android:textSize="12sp"
                    android:layout_weight="3.5"
                    android:gravity="center_horizontal"
                    />
            </TableRow>
        </TableLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="IPK :"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="40dp"
        />

    <Button
        android:id="@+id/hitungIPK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hitung IPK"
       />
</LinearLayout>